Project Restructure (#78)
* Project Restructure

to rebase is to feel pain

this is going away too

added tests, added local store

i'm gonna rebase

* Testing Out CI-only 'test' Workflow

* Test Spinning Up Containers As A Job Step

* Add Error Checks in users_test.go

* Remove Job Matrix in Workflow File

* common: deleted common package

Moved the stuff from common package into dedicated spots. DataStore
interface moved to database, SuccessResponse stuff moved into a new
package called request.

* project: reformat all files with line endings

* database: rename methods for purpose clarity

* example.env: reorganize elements

* ping: delete package

The original purpose of the package, to serve as an example for other
package layouts, is largely obsoleted by the existence of the users
package.

* main, server: saved database function rename

When I did the project-wide rename of the functions in the database
package, I didn't save the files that had stuff renamed.
